# toil

./: .air.toml  .gitignore  .golangci.yml  CLAUDE.md  Makefile  NOTICE  README.md  go.mod  go.sum  lefthook.yml
.claude/skills/: building-workflows
.github/workflows/: ci.yml
cmd/backfill-narratives/: main.go
cmd/semantic_port/: main.go
cmd/tgwm/: main.go
cmd/toil/: daemonize_unix.go  daemonize_windows.go  main.go  narratives.go  run_args_test.go  runs_tree.go  runs_tree_test.go
definitions/runners/: claude.yaml  codex.yaml  human.yaml  serf.yaml  shell.yaml
definitions/workflows/: brainstorm.yaml  build_component.yaml  debug.yaml  debug_merge.yaml  finish_branch.yaml  forced_debug_test.yaml  forced_review_test.yaml  forced_review_test_downstream.yaml  forced_review_test_dry.yaml  forced_review_test_old.yaml  implement_spec.yaml  implement_task.yaml  initial_port.yaml  integrate_component.yaml  interview.yaml  learn.yaml  semantic_port.yaml  verify_integration.yaml
docs/: debugging-toil-and-serf.md
docs/runbooks/: v7-deploy-drain.md
docs/specs/: README.md  api.md  approvals.md  cli.md  document-model.md  eval-suite.md  file-layout.md  inspect.md  interviews.md  (+14 more)
tools/toil-tui/: Cargo.toml
tools/toil-tui/src/: app.rs  client.rs  lib.rs  main.rs  models.rs  report.rs  sse.rs  transcript_parser.rs
tools/toil-tui/src/ui/: approvals_tab.rs  chrome.rs  graph.rs  mod.rs  report.rs  runs_tab.rs  transcript.rs  workflows_tab.rs
tools/toil-tui/tests/: graph_test.rs  models_test.rs  report_test.rs  sse_test.rs  transcript_parser_test.rs  ui_helpers_test.rs
(+417 files in other folders)
